Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/B2B_Subscriptions__c.object-meta.xml
<CustomObject>
    <label>B2B Subscriptions</label>
    <nameField>
        <displayFormat>Sub# {00000}</displayFormat>
        <label>B2B Subscriptions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>