Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>B2B_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Billing Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>B2B Subscriptions (B2B Billing Address)</relationshipLabel>
    <relationshipName>B2B_Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>