Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>B2B_Billing_Frequency__c</fullName>
    <label>B2B Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every 1 Month</fullName>
            </value>
            <value>
                <fullName>Every 2 Months</fullName>
            </value>
            <value>
                <fullName>Every 3 Months</fullName>
            </value>
            <value>
                <fullName>Every 6 Months</fullName>
            </value>
            <value>
                <fullName>Every 12 Months</fullName>
            </value>
            <value>
                <fullName>Every 18 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>