Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Contact__c.field-meta.xml
<CustomField>
    <fullName>B2B_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2B Subscriptions</relationshipLabel>
    <relationshipName>B2B_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>