Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_End_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_End_Date__c</fullName>
    <label>B2B End Date</label>
    <type>Date</type>
</CustomField>