Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>B2B_Payment_Method__c</fullName>
    <label>B2B Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>card</fullName>
                <label>Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>