Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Po_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Po_Number__c</fullName>
    <label>B2B Po Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>