Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Renew_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Renew_Status__c</fullName>
    <label>B2B Renew Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 1: Order and Order Items Creation</fullName>
            </value>
            <value>
                <fullName>Step 2: Shipping Calculations</fullName>
            </value>
            <value>
                <fullName>Step 3: Tax Calculations</fullName>
            </value>
            <value>
                <fullName>Step 4: Process Payment</fullName>
            </value>
            <value>
                <fullName>Step 5: Subscription Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>