Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>B2B_Special_Instruction__c</fullName>
    <label>B2B Special Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>