Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Status__c</fullName>
    <label>B2B Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>