Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Stripe_Payment_Intent__c.field-meta.xml
<CustomField>
    <fullName>B2B_Stripe_Payment_Intent__c</fullName>
    <description>Stripe Payment Intent for future payments</description>
    <label>B2B Stripe Payment Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>