Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/fields/B2B_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Total_Amount__c</fullName>
    <label>B2B Total Amount</label>
    <summarizedField>B2B_Subscription_Items__c.B2B_Total_Price__c</summarizedField>
    <summaryForeignKey>B2B_Subscription_Items__c.B2B_Subscriptions__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>