Perkin-UAT/force-app/main/default/objects/B2B_Subscriptions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription_Name__c</columns>
    <columns>B2B_Account__c</columns>
    <columns>B2B_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>B2B_Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>